@@ -1,2 +1,3 @@
 # HandleData
 处理数据，按照两次排序求并集
+-Xmx4g -Xms4g -XX:PermSize=1024M -XX:MaxPermSize=1g
